# Interactive-Effects-Exploration-Python

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/: main.py
frontend/: index.html  stage-map.html  stage1-distortion.html  stage2-chorus.html  stage3-reverb.html  stage4-delay.html  stage5-boss.html  style.css
