[project]
name = "interactive-effects-exploration-python"
version = "0.1.0"
description = ""
authors = [
    {name = "π",email = "pirayan20@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pedalboard (>=0.9.16,<0.10.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydub (>=0.25.1,<0.26.0)",
    "ffmpeg (>=1.4,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
